--- a/css/hero-slider.css
+++ b/css/hero-slider.css
@@ -14,7 +14,8 @@ html {
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  /* font family is ignored b/c we specify font in html */
+  /* font-family: "Open Sans", sans-serif; */
   color: #2c343b;
   background-color: #f2f2f2;
 }
