--- a/css/dde-main.css
+++ b/css/dde-main.css
@@ -595,11 +595,71 @@ section {
 }
 
 
+/* Header */
+header {
+  text-align: left;
+  background-color: #282b2f;
+  padding: 10px 0px;
+}
+
+header h3 a{
+  padding: 15px;
+  text-align: left;
+  font-size: 16px;
+}
+header .primary-button {
+  margin-bottom: 30px;
+}
+
+header ul {
+  padding: 0px;
+  margin: 0px;
+  list-style: none;
+}
+
+header ul li {
+  display: inline-block;
+  margin: 0px 4px;
+}
+
+header ul li a {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  text-align: left;
+  display: inline-block;
+  background-color: #ff7d27;
+  color: #282b2f;
+  border-radius: 50%;
+  text-decoration: none;
+  transition: all 0.5s;
+  font-size: 17px;
+}
+
+header ul li a:hover {
+  color: #282b2f;
+  background-color: #ff8e43;
+}
+
+header p {
+  margin-top: 15px;
+  color: #fff;
+  letter-spacing: 0.5px;
+  margin-bottom: 0px;
+}
+
+header em {
+  color: #ff8e43;
+  font-weight: 600;
+  font-style: normal;
+}
+
+
 /* Footer */
 footer {
   text-align: center;
   background-color: #282b2f;
-  padding: 70px 0px;
+  padding: 30px 0px;
 }
 
 footer h3 a{
@@ -642,7 +702,6 @@ footer ul li a:hover {
 }
 
 footer p {
-  /* font-size: 64px; */
   margin-top: 15px;
   color: #fff;
   letter-spacing: 0.5px;
@@ -922,4 +981,29 @@ body.lb-disable-scrolling {
   cursor: pointer;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
+}
+
+/* Modal CSS modifications */
+.modal-dialog{
+  background-color: rgba(0,0,0,0);
+}
+.modal-content {
+    /*% of window height */
+    /* height: 200%; */
+    background-color: rgba(0,0,0,0);
+    border:0px;
+}
+
+.modal-body {
+  /* height:10%; */
+} 
+
+/* Embed-responsive modifications (for modal dialogs) */
+embed-responsive {
+}
+
+.embed-responsive-contactform::before {
+  /* important to change padding depending on form height to make scroll bar disappear */
+  padding-top: 320%;
+  
 }
