--- a/css/dde-main.css
+++ b/css/dde-main.css
@@ -536,6 +536,25 @@ section {
   background-position: center center;
 }
 
+.contact-content .left-text h4 {
+  font-size: 24px;
+  font-weight: 500;
+  color: #fff;
+}
+.contact-content .left-text .line-dec {
+  width: 45px;
+  height: 3px;
+  background-color: #ff7d27;
+  margin: 20px 0px 20px 0px;
+}
+.contact-content h3 {
+  font-size: 18px;
+  color: #fff;
+}
+.contact-content p {
+  color: #fff;
+}
+
 .contact-form {
   background-color: rgba(0, 0, 0, 0.5);
   padding: 30px 25px;
@@ -704,8 +723,11 @@ footer ul li a:hover {
 footer p {
   margin-top: 15px;
   color: #fff;
-  letter-spacing: 0.5px;
-  margin-bottom: 0px;
+}
+
+p.center {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 footer em {
