--- a/css/dde-main.css
+++ b/css/dde-main.css
@@ -206,6 +206,8 @@ a:hover { color:#ff7d27; }
   background-position: center center;
 }
 
+
+
 .service-content .left-text h4 {
   font-size: 24px;
   font-weight: 500;
@@ -534,6 +536,10 @@ section {
   background-attachment: fixed;
   background-size: cover;
   background-position: center center;
+}
+
+.contact-content .card-body{
+  background-color: transparent;
 }
 
 .contact-content .left-text h4 {
