--- a/css/dde-main.css
+++ b/css/dde-main.css
@@ -18,8 +18,18 @@ body {
 }
 
 a { color:  #3d81e1; }
-
 a:hover { color:#ff7d27; }
+
+/* Reserved for pricing box*/
+h6 {
+  display: block;
+  font-size: 14px;
+  margin-top: 1.33em;
+  margin-bottom: 2.33em;
+  margin-left: 0;
+  margin-right: 0;
+  /* border: 1px solid darkblue; */
+}
 
 /*----------
   NAV
@@ -170,7 +180,14 @@ a:hover { color:#ff7d27; }
   font-size: 36px;
   color: #080353;
 }
-
+.baner-content address {
+  display: block;
+  margin-top: 100px;
+  font-weight: 300;
+  font-size: 14px;
+  text-align: right;
+  color: #080353;
+}
 .baner-content .primary-button {
   margin-top: 15px;
 }
@@ -248,7 +265,7 @@ h4, .h4 {
 .service-content .service-item {
   background-color: rgba(0, 0, 0, 0.5);
   padding: 25px 30px;
-  text-align: center;
+  text-align: left;
   color: #fff;
   margin-bottom: 30px;
 }
@@ -273,6 +290,11 @@ h4, .h4 {
   font-size: 24px;
   font-weight: 500;
   color: #2c343b;
+}
+
+.projects-content .left-text .category {
+  font-style: italic;
+  font-weight: bold;
 }
 
 .projects-content .left-text .line-dec {
@@ -376,7 +398,7 @@ h4, .h4 {
 
 .tabs-content .left-text ul {
   padding: 0;
-  margin-top: 30px;
+  margin-top: 15px;
   list-style: none;
 }
 
@@ -500,8 +522,8 @@ section {
   color:#fff;
   font-size: 14px;
   font-weight: 700;
-  padding:10px 15px;
-  border:4px solid #fff;
+  padding:5px 5px;
+  border:1px solid #fff;
 }
 
 .tabs a:hover {
@@ -693,6 +715,8 @@ footer h3 a{
   font-size: 16px;
 }
 footer .primary-button {
+  text-align:left;
+  margin-top: 10px;
   margin-bottom: 30px;
 }
 
@@ -729,6 +753,7 @@ footer ul li a:hover {
 footer p {
   margin-top: 15px;
   color: #fff;
+  text-align: left;
 }
 
 p.center {
@@ -742,6 +767,12 @@ footer em {
   font-style: normal;
 }
 
+footer .line-dec {
+  width: 45px;
+  height: 3px;
+  background-color: #ff7d27;
+  margin: 20px 0px 20px 0px;
+}
 @media (max-width: 767px){
   
   .baner-content {
@@ -765,14 +796,14 @@ footer em {
 
   .service-content {
     padding-top: 5vh;
-    text-align: center;
+    text-align: left;
   }
 
   .service-content .left-text .line-dec {
     width: 45px;
     height: 3px;
     background-color: #ff7d27;
-    margin: 20px auto 20px auto;
+    margin: 20px 0 20px 0;
   }
 
   .service-content .left-text ul {
